[package]
name = "pichu"
version = "0.1.0"
edition = "2021"
authors = ["Arne Bahlo <hey@arne.me>"]
license = "MIT OR Apache-2.0"
description = "The static site generator designed to evolve with your needs."
repository = "https://github.com/bahlo/pichu"
readme = "README.md"
keywords = ["static", "site", "generator", "ssg", "markdown", "html", "sass"]


[dependencies]
glob = "0.3"
thiserror = "2"
# markdown
gray_matter = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
syntect = { version = "5.2", optional = true }
comrak = { version = "0.39", optional = true }
serde_json = { version = "1", optional = true }
# sass
grass = { version = "0.13", default-features = false, features = [
    "random",
], optional = true }
blake3 = { version = "1.8", optional = true }
rayon = "1.10.0"

[features]
default = ["markdown", "sass"]
markdown = ["gray_matter", "serde", "syntect", "comrak", "serde_json"]
sass = ["grass", "blake3"]
