[package]
name = "pichu"
version = "0.4.1"
edition = "2021"
authors = ["Arne Bahlo <hey@arne.me>"]
license = "MIT OR Apache-2.0"
description = "The static site generator designed to evolve with your needs."
repository = "https://github.com/bahlo/pichu"
readme = "README.md"
keywords = ["static", "markdown", "html", "sass"]


[dependencies]
glob = "0.3"
thiserror = "2"
rayon = "1.10.0"
# markdown
gray_matter = { version = "0.2", optional = true, default-features = false, features = [
    "yaml",
] }
serde = { version = "1", features = ["derive"], optional = true }
syntect = { version = "5.2", optional = true }
comrak = { version = "0.39", optional = true, default-features = false, features = [
    "syntect",
] }
serde_json = { version = "1", optional = true }
# sass
grass = { version = "0.13", default-features = false, features = [
    "random",
], optional = true }
blake3 = { version = "1.8", optional = true }
# watch
notify = { version = "8.2", optional = true }
notify-debouncer-mini = { version = "0.4", optional = true }

[features]
default = ["markdown", "sass", "watch"]
markdown = ["gray_matter", "serde", "syntect", "comrak", "serde_json"]
sass = ["grass", "blake3"]
watch = ["notify", "notify-debouncer-mini"]

[dev-dependencies]
maud = "0.27"
